Kubernetes/Flask-Deloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-deployment
  labels:
    app: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      name: hivebox
      labels:
        app: flask-app
    spec:
      containers:
      - name: hivebox
        image: hivebox-img:26
        imagePullPolicy: Never
        resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        ports:
          - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
spec:
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP


# apiVersion: v1
# kind: Pod
# metadata:
#   name: flask-app
#   labels:
#     app: flask-app
# spec:
#   containers:
#   - name: hivebox
#     image: hivebox-img:26
#     imagePullPolicy: Never
#     resources:
#         requests:
#           memory: "64Mi"
#           cpu: "250m"
#         limits:
#           memory: "128Mi"
#           cpu: "500m"
#     ports:
#       - containerPort: 5000
