Kubernetes/Redis-Valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
spec:
  selector:
    app: valkey
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:7.2
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: valkey-storage
              mountPath: /data
          args: ["--save", "", "--appendonly", "yes"]
      volumes:
        - name: valkey-storage
          persistentVolumeClaim:
            claimName: valkey-pvc
